deployment/ingress/ingress-distribution.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vda-distribution
  namespace: vda-distribution
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: vdadistribution.mhsolution.vn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vdadistributor
            port:
              number: 8002
