deployment/ingress/vda-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vda-socket
  namespace: vda
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  # - host: app.vda
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: cmsapp
  #           port:
  #             number: 80
  # - host: web.vda
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: cmsweb
  #           port:
  #             number: 3000
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cmssocket
            port:
              number: 6001
